--- a/ask/qa/tmpl/question.html
+++ b/ask/qa/tmpl/question.html
@@ -24,5 +24,6 @@
 			{% endfor %}
 		</fieldset>
 		<div><button type="submit">Answer it!</button></div>
+		{% csrf_token %}
 	</form>
 {% endblock %}
