--- a/ask/qa/tmpl/ask.html
+++ b/ask/qa/tmpl/ask.html
@@ -12,5 +12,6 @@
 			{{ form.as_p }}
 		</fieldset>
 		<div><button type="submit">Do it!</button></div>
+		{% csrf_token %}
 	</form>
 {% endblock %}
